<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/scoreView"
        android:layout_width="208dp"
        android:layout_height="75dp"
        android:layout_marginTop="40dp"
        android:textAlignment="center"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/gameButton"
        android:layout_width="156dp"
        android:layout_height="92dp"
        android:layout_marginTop="100dp"
        android:text="@string/game_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scoreView" />

    <Button
        android:id="@+id/logoutButton"
        android:layout_width="150dp"
        android:layout_height="52dp"
        android:layout_marginBottom="21dp"
        android:text="@string/logout_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/buyButton"
        android:layout_width="150dp"
        android:layout_height="52dp"
        android:layout_marginBottom="16dp"
        android:text="@string/buy_button"
        app:layout_constraintBottom_toTopOf="@+id/logoutButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>